--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,17 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.5
-  http: ^0.13.5
+  http: ^1.2.1
   provider: ^6.0.3
   cached_network_image: ^3.2.1
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.13.1
   flutter:
     sdk: flutter
-  google_fonts: ^3.0.1
-
+  google_fonts: ^6.1.0
+  url_launcher_web: any
+  intl: ^0.19.0
+  logger: ^2.0.2+1
+  
 flutter_icons:
   android: 'launcher_icon'
   ios: true
@@ -48,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
 
